Added ALGO notes file to keep the main concepts handy
Signed-off-by: Navneet Verma <navneev@amazon.com>